--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -272,7 +272,7 @@
   "roleName is Required": "roleName is Required",
   "No-Of-Privilages": "No-Of-Privilages",
   "ListAndSearch": "List-Search",
-  "statistics": "Statistics",
+  "statistics": "الاحصائيات",
   "logout": "Logout",
   "Mobil pattern": "Mobile number can only contain digits",
   "Mobil min length": "Mobile number should contain at least 10 digits",
